test/library/standard/LinkedLists/deitz/indefinite/test_indefinite1.good
(1, 1)
(4, 8)
(7, 15)
(10, 22)
(13, 29)
(16, 36)
(19, 43)

(2, 1)
(3, 2)
(4, 3)
(5, 4)
(6, 5)

(2, 1)
(1, 2)
(0, 3)
(-1, 4)
(-2, 5)
test_indefinite1.chpl:13: error: zippered iterations have non-equal lengths
